--- a/projeto modelos.tex
+++ b/projeto modelos.tex
@@ -86,7 +86,7 @@
     <tfroo1@iscte-iul.pt> \\
     Afonso Silva, 105208 \\
     <agsos@iscte-iul.pt> \\
-    TODO AUTOR, NUMERO \\
+    Primeiro e ultimo nome, NUMERO \\
     <TODO EMAIL>
   }
   \date{20/11/2022 \\ Versão 0.0.1} % 
