--- a/exploracao.Rmd
+++ b/exploracao.Rmd
@@ -1,4 +1,18 @@
 ```{r}
+
+#install.packages("here")
+#install.packages("rgdal")
+#install.packages("sf")
+#install.packages("terra")
+#install.packages("ggplot2")
+#install.packages("tmap")
+#install.packages("dplyr")
+#install.packages("gridExtra")
+#install.packages("cowplot")
+#install.packages("ggforce")
+#install.packages("concaveman")
+#install.packages("pacman")
+
 library(pacman)
 p_load(
   here,
