--- a/references.bib
+++ b/references.bib
@@ -8,3 +8,9 @@
     pages = {144--161},
     url = {https://journal.r-project.org/archive/2013-1/kahle-wickham.pdf},
 }
+
+@misc{
+    title = {About {Inside Airbnb}}
+    howpublished = {\url{http://insideairbnb.com/about.html}},
+    note = {Accessed: 24/11/2022}
+}
