--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,4 @@
-@Article{,
+@Article{ggmap,
     author = {David Kahle and Hadley Wickham},
     title = {ggmap: Spatial Visualization with ggplot2},
     journal = {The R Journal},
@@ -9,8 +9,8 @@
     url = {https://journal.r-project.org/archive/2013-1/kahle-wickham.pdf},
 }
 
-@misc{
-    title = {About {Inside Airbnb}}
+@misc{InsideAirBnbAbt,
+    title = {About {Inside Airbnb}},
     howpublished = {\url{http://insideairbnb.com/about.html}},
     note = {Accessed: 24/11/2022}
 }
