--- a/references.bib
+++ b/references.bib
@@ -6,11 +6,17 @@
     volume = {5},
     number = {1},
     pages = {144--161},
-    url = {https://journal.r-project.org/archive/2013-1/kahle-wickham.pdf},
+    url = {journal.r-project.org/archive/2013-1/kahle-wickham.pdf},
 }
 
 @misc{InsideAirBnbAbt,
     title = {About {Inside Airbnb}},
-    howpublished = {\url{http://insideairbnb.com/about.html}},
-    note = {Accessed: 24/11/2022}
+    howpublished = {\url{insideairbnb.com/about.html}},
+    note = {Acessado: 24/11/2022}
 }
+
+@misc{DicDadosAirBnb,
+    howpublished = {\url{tinyurl.com/DataDictAirbnb}},
+    note = {Accessed: 24/11/2022} 
+}
+
