--- a/references.bib
+++ b/references.bib
@@ -11,7 +11,7 @@
 
 @misc{InsideAirBnbAbt,
     title = {About {Inside Airbnb}},
-    howpublished = {\url{insideairbnb.com/about.html}},
+    howpublished = {\href{https:\\insideairbnb.com/about.html}{insideairbnb.com/about.html}},
     note = {Acessado: 24/11/2022}
 }
 
